# compute-quant-lab

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .worktreeinclude  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: agent-architect.md  backtest-runner.md  code-reviewer.md  data-engineer.md  data-quality-auditor.md  infra-engineer.md  literature-scout.md  quant-researcher.md  risk-validator.md
.claude/rules/: backtest-mlflow-logging.md  data-integrity.md  forward-real-simulated.md  python-quality.md  quant-no-lookahead.md  training-cold-store.md
.claude/skills/backtest-pitfalls/: SKILL.md
.claude/skills/cointegration-analysis/: SKILL.md
.claude/skills/data-quality-check/: SKILL.md
.claude/skills/market-scan/: SKILL.md
.claude/skills/new-agent/: SKILL.md
.claude/skills/new-research-project/: SKILL.md
.claude/skills/run-backtest/: SKILL.md
.claude/skills/spread-trading-playbook/: SKILL.md
.github/workflows/: ci.yml  collect.yml  storage-alert.yml
core/backtest/: __init__.py  costs.py  engine.py  guards.py  metrics.py  protocols.py  reference_loop.py  tracking.py
core/backtest/_loop/: .gitignore  Cargo.toml  README.md  pyproject.toml
core/backtest/_loop/src/: lib.rs
core/backtest/tests/: conftest.py  test_costs.py  test_determinism.py  test_engine.py  test_guards.py  test_metrics.py  test_parity.py  test_reference_loop.py  test_tracking.py
core/features/: __init__.py  builders.py  protocols.py
core/features/tests/: conftest.py  test_alignment.py  test_builders.py  test_lookahead.py  test_revisions.py
core/ingestion/: __init__.py  compute_index.py  estimators.py  gpu_market.py  protocols.py  snapshot_store.py
core/ingestion/energy/: __init__.py  base.py  ercot.py  ercot_transport.py
core/ingestion/providers/: CONVERGENCE.md  __init__.py  base.py  cudo.py  datacrunch.py  hyperstack.py  primeintellect.py  runpod.py  tensordock.py  vastai.py
core/models/: __init__.py  pipeline.py  protocols.py  strategy.py  validation.py  xgboost_model.py
core/models/tests/: conftest.py  test_lookahead.py  test_pipeline.py  test_strategy.py  test_validation.py  test_xgboost_model.py
core/pricing/: .gitignore  __init__.py  _timeindex.py  efficiency.py  fx.py  oracle.py  power_model.py  pricer.py  protocols.py  pue_prior.py  sources.py  spark_spread.py
core/pricing/_kernel/: Cargo.toml  pyproject.toml
core/pricing/_kernel/src/: lib.rs
core/pricing/derivatives/: __init__.py  carry.py  futures.py  protocols.py
core/signals/: __init__.py  futures_basis.py  mean_reversion.py  ml.py  protocols.py
core/signals/tests/: conftest.py  test_futures_basis.py  test_mean_reversion.py  test_ml.py  test_point_in_time.py  test_protocols.py
core/storage/: CONVERGENCE.md  __init__.py  converters.py  demo.py  duckdb_query.py  energy_store.py  migrate.py  parquet_store.py  protocols.py  schema.py  snapshot_store.py
core/storage/results/: SYNTHESIS.md  run_summary.json
core/storage/tests/: conftest.py  test_collector_rewire.py  test_demo.py  test_duckdb_query.py  test_energy_store.py  test_idempotence.py  test_migrate.py  test_parquet_roundtrip.py  test_point_in_time.py  test_schema_enrichment.py  test_snapshot_store_adapter.py
core/utils/: __init__.py  config.py  logging.py  tracking.py
data/: README.md
data/cold/: .gitignore  ercot.dvc
data/interim/: aligned_spark.parquet.dvc
data/snapshots/: gpu_prices_202606.csv  gpu_prices_202607.csv
docs/: git-workflow.md  parallel-ops.md  storage-roadmap.md
docs/orchestration/: instance_template.md  money-parallel-plan.md  projects_roster.md
docs/orchestration/instances/: P01_digital_spark_spread.md  P02_spread_mean_reversion.md  P03_gpu_vol_term_structure.md  P04_compute_index_curve.md  P05_energy_compute_basis.md  P06_compute_futures_pricing.md  P07_exogenous_macro_signal.md  P08_backtest_risk_engine.md  P09_ml_signal_ensemble.md  P10_portfolio_execution.md  P11_storage_layer.md  P12_signals_integration.md  W1_providers_foundation.md  W2_providers_connectors.md  WD_compute_benchmark.md  WP_procurement_private.md  WS_service_product.md
docs/superpowers/plans/: 2026-06-23-gpu-price-mcp-server.md  2026-06-23-sprint-pricing-energy.md
docs/superpowers/specs/: 2026-06-23-L0-ercot-grid-stress-preregistration.md  2026-06-23-L0-v2-reserve-margin-net-load.md  2026-06-23-gpu-price-mcp-server-design.md
infra/collectors/: collect.ps1  ercot_backfill.py  gpu_price_snapshot.py
infra/collectors/tests/: conftest.py  test_ercot_backfill.py
infra/mcp-servers/gpu-price-server/: CONVERGENCE.md  README.md  server.py  service.py
private/: README.md
projects/01_digital_spark_spread/: CLAUDE.md  CONVERGENCE.md
projects/01_digital_spark_spread/results/: SYNTHESIS.md  run_summary.json
projects/01_digital_spark_spread/src/: prepare_dataset.py  run_pricer.py
projects/02_spread_mean_reversion/: CLAUDE.md  CONVERGENCE.md  README.md
projects/02_spread_mean_reversion/results/: SYNTHESIS.md
projects/03_gpu_vol_term_structure/: CLAUDE.md  CONVERGENCE.md  README.md
projects/04_compute_index_curve/: CLAUDE.md  README.md  run_build_curve.py
projects/04_compute_index_curve/forward_engine/: .gitignore  Cargo.toml  pyproject.toml
projects/04_compute_index_curve/forward_engine/src/: lib.rs
projects/05_energy_compute_basis/: CLAUDE.md  CONVERGENCE.md  README.md
projects/06_compute_futures_pricing/: CLAUDE.md  CONVERGENCE.md  README.md
projects/07_exogenous_macro_signal/: CLAUDE.md  CONVERGENCE.md
projects/08_backtest_risk_engine/: CLAUDE.md  CONVERGENCE.md  run_demo.py
projects/09_ml_signal_ensemble/: CLAUDE.md  CONVERGENCE.md  README.md
projects/10_portfolio_execution/: CLAUDE.md  CONVERGENCE.md  README.md
projects/13_compute_benchmark/: CLAUDE.md  README.md  run_build_benchmark.py
projects/14_service/: README.md
projects/14_service/dashboard/: app.py
references/: bibliography.md
scripts/: new-worktree.ps1  new-worktree.sh
tests/: test_efficiency.py  test_normalized_spread.py  test_pricer.py  test_pricer_parity.py  test_pue_prior.py  test_spark_spread.py
(+2193 files in other folders)
