[project]
name = "compute-quant-lab"
version = "0.1.0"
description = "Labo de recherche quant : le compute comme classe d'actifs (digital spark spread)."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "statsmodels>=0.14",
    "entsoe-py>=0.6",
    "requests>=2.31",
    "dvc>=3.50",
    "mlflow>=2.12",
    "streamlit>=1.34",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10", "pre-commit>=3.7", "maturin>=1.7"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "core/pricing/_kernel/target",
    "core/backtest/_loop/target",
    "projects/04_compute_index_curve/forward_engine/target",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "core/backtest/tests", "projects/04_compute_index_curve/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
