[package]
name = "forward_engine"
version = "0.1.0"
edition = "2021"
description = "Moteur Monte-Carlo de la courbe forward compute (Schwartz un-facteur) — jambe perf de P04."

[lib]
name = "forward_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py311", "extension-module"] }
rand = "0.8"
rand_distr = "0.4"
